# tix

./: Cargo.toml  LICENSE-MIT  README.md  config.toml.example
src/: alarm.rs  config.rs  display.rs  main.rs  parse.rs  schedule.rs  state.rs  types.rs
